--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Alata&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
@@ -18,7 +18,7 @@
           <div id="box1"></div>
           <div id="box2"></div>
         </div>
-        <div id="logo"><img src="/logo.png" alt="" id="logoimg" /></div>
+        <div id="logo"><img src="logo.png" alt="" id="logoimg" /></div>
       </div>
       <div id="content">
         <div id="mainimg">
@@ -1100,16 +1100,16 @@
         <!-- <div id="logoname">Kitzone Technology</div> -->
         <div class="support">
           <div class="links">
-            <img src="/call.png" alt="" id="call" />
+            <img src="call.png" alt="" id="call" />
             <div class="linksflexhead">+919636282626</div>
           </div>
           <div class="links">
-            <img src="/mail.png" alt="" id="mail" />
+            <img src="mail.png" alt="" id="mail" />
             <div class="linksflexhead">support@kitzone.in</div>
           </div>
         </div>
       </div>
     </div>
-    <script src="/app.js" id="1"></script>
+    <script src="app.js" id="1"></script>
   </body>
 </html>
